--- a/scripts/my_style.css
+++ b/scripts/my_style.css
@@ -1,4 +1,3 @@
-
 #fade {
 	display: none;
 	position:absolute;
@@ -13,7 +12,7 @@
 	filter: alpha(opacity=80);
 }
 
-#modal {
+.modal {
 	display: none;
 	position: absolute;
 	top: 35%;
@@ -51,13 +50,4 @@
 
 .tooltip_1:hover .tooltiptext_1 {
 	visibility: visible;
-}
-
-table,
-td, th {
-	border: 1px solid black;
-	padding: 3px;
-	table-layout: fixed;
-	word-wrap: break-word;
-	width: 50%;
 }
